@@ -86,7 +86,7 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements Us
             // 查询用户的角色
             List<Role> roles = roleService.findRolesByUserId(user.getId());
 
-            return generateToken(user, roles, roles.isEmpty() ? "" : roles.getFirst().getCode());
+            return generateToken(user, roles, roles.isEmpty() ? "" : roles.get(0).getCode());
         } else {
             throw new BizException(BizResponseCode.ERR_10002);
         }
